--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "description": "To run this in vscode: 1. in the lower left corner click the green symbol. 2. select open folder in container 3. choose the current folder 4. add a new terminal and run live-server public",
   "main": "index.js",
   "dependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {},
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
