--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mzietlow.github.io/github-blog",
+  "homepage": "https://mzietlow.github.io/github-blog",
   "name": "github-blog",
   "version": "1.0.0",
   "description": "To run this in vscode: 1. in the lower left corner click the green symbol. 2. select open folder in container 3. choose the current folder 4. add a new terminal and run live-server public",
@@ -25,5 +25,17 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mzietlow/github-blog/issues"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
