Extend indecision app, add components, use webpack

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,2 @@
 FROM qmcgaw/reactdevcontainer
-RUN npm install -g babel-cli@6.24.1
-RUN npm add babel-preset-react@6.24.1 babel-preset-env@1.5.2
+RUN npm install -g eslint
