--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,10 +4,11 @@ env:
 extends:
   - eslint:recommended
   - plugin:react/recommended
+parser: babel-eslint
 parserOptions:
   ecmaFeatures:
     jsx: true
-  ecmaVersion: 13
+  ecmaVersion: 6
   sourceType: module
 plugins:
   - react
