--- a/package.json
+++ b/package.json
@@ -6,28 +6,25 @@
   "main": "index.js",
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "gh-pages": "^3.2.3",
-    "live-server": "^1.2.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "validator": "^13.7.0",
-    "webpack": "^3.1.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.27.1"
   },
   "scripts": {
-    "dev-server": "webpack-dev-server",
-    "dev-build": "webpack",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
