--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "To run this in vscode: 1. in the lower left corner click the green symbol. 2. select open folder in container 3. choose the current folder 4. add a new terminal and run live-server public",
   "main": "index.js",
   "dependencies": {
+    "@babel/eslint-parser": "^7.16.5",
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
@@ -14,8 +14,10 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-modal": "^3.14.4",
+    "react-scripts": "^5.0.0",
     "validator": "^13.7.0",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "eslint-plugin-react": "^7.27.1"
   },
   "scripts": {
+    "webpack": "webpack",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
