--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "scripts": {
     "webpack": "webpack",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run webpack && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
