--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^6.5.1",
     "gh-pages": "^3.2.3",
+    "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-scripts": "^5.0.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "validator": "^13.7.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
