--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^6.5.1",
     "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
