--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "eslint-plugin-react": "^7.27.1"
   },
   "scripts": {
-    "webpack": "webpack",
     "predeploy": "npm run build",
-    "deploy": "npm run build && gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "npm run webpack && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
