--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
