--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
