--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.5.1",
     "gh-pages": "^3.2.3",
+    "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-addons-shallow-compare": "^15.6.3",
+    "react-dates": "^12.7.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
