--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,10 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
     "requireConfigFile": "false,",
@@ -15,8 +13,6 @@
     },
     "ecmaVersion": 8
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {}
 }
