--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.5.1",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
     "gh-pages": "^3.2.3",
     "jest": "^27.5.1",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
+    "raf": "^3.3.2",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
     "react-dates": "^12.7.0",
@@ -25,6 +29,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-test-renderer": "^16.0.0",
     "redux": "^4.1.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
@@ -44,8 +49,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
-    "test-watch": "jest --watch",
+    "test": "jest --config=jest.config.json",
+    "test-watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
   },
   "repository": {
