--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mzietlow.github.io/blog",
+  "homepage": "https://mzietlow.github.io/",
   "name": "blog",
   "version": "1.0.0",
   "description": "To run this in vscode: 1. in the lower left corner click the green symbol. 2. select open folder in container 3. choose the current folder 4. add a new terminal and run live-server public",
@@ -14,6 +14,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.17.3",
     "gh-pages": "^3.2.3",
     "jest": "^27.5.1",
     "moment": "^2.29.1",
