--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   vscode:
     build: .
-    image: qmcgaw/reactdevcontainer
+    image: qmcgaw/basedevcontainer:v0.3.0-debian
     volumes:
       # Docker volume to contain node_modules for performance reason
       - node_modules:/workspace/node_modules
