--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ packages/react-devtools-extensions/.tempUserDataDir
 packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-scheduling-profiler/dist
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
