--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
+    "start-node-server": "node server/server.js",
+    "heroku-postbuild": "npm run build",
     "build": "react-scripts build",
     "test": "jest --config=jest.config.json",
     "test-watch": "npm run test -- --watch",
