--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "start-node-server": "node server/server.js",
+    "start:dev": "react-scripts start",
+    "start": "node server/server.js",
     "heroku-postbuild": "npm run build",
     "build": "react-scripts build",
     "test": "jest --config=jest.config.json",
