--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.5.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "express": "^4.17.3",
-    "gh-pages": "^3.2.3",
-    "jest": "^27.5.1",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
@@ -30,7 +25,6 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "react-test-renderer": "^16.0.0",
     "redux": "^4.1.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
@@ -43,7 +37,13 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-plugin-react": "^7.27.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^27.5.1",
+    "gh-pages": "^3.2.3",
+    "react-test-renderer": "^16.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
