--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "raf": "^3.3.2",
     "react": "^17.0.2",
@@ -36,13 +37,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.27.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^27.5.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.27.1",
     "gh-pages": "^3.2.3",
+    "jest": "^27.5.1",
     "react-test-renderer": "^16.0.0"
   },
   "scripts": {
