--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "uuid": "^8.3.2",
