--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "^9.6.10",
     "moment": "^2.29.1",
@@ -28,6 +30,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
@@ -55,7 +58,7 @@
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build",
     "build": "react-scripts build",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "test-watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
   },
